panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__decl_in_global_scope__test_function_definition.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/decl_in_global_scope/test_function_definition.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/decl_in_global_scope/test_function_definition.c"
   (function-definition
      a~0 `fn() -> int`
      (compound-statement
         (return 42)))
   (function-definition
      b~2 `fn(∅: int) -> int`
      (params
         b.unnamed_parameter.0~4 `int`)
      (compound-statement
         (return 42)))
   (function-definition
      c~5 `fn(a: int) -> int`
      (params
         a~7 `int`)
      (compound-statement
         (return (name a~7 `int`))))
   (function-definition
      d~8 `fn(a: int) -> int`
      (params
         a~10 `int`)
      (compound-statement
         (compound-statement
            (return (name a~10 `int`)))))
   (function-definition
      e~11 `fn() -> int`
      (compound-statement
         (compound-statement)
         (expression ∅)
         (return 42)))
   (function-definition
      f~13 `fn() -> int`
      (compound-statement
         (declaration a~15 `int` 42)
         (expression (name a~15 `int`))
         (return (name a~15 `int`))))
   (function-definition
      g~16 `fn() -> char`
      (compound-statement
         (declaration c~18 `char` 0)
         (return (name c~18 `char`))))
   (function-definition
      h~19 `fn() -> int`
      (compound-statement
         (declaration a~21 `int` 42)
         (compound-statement
            (declaration a~22 `int` 27)
            (return (name a~22 `int`)))))
   (function-definition
      i~23 `fn(a: int) -> int`
      (params
         a~25 `int`)
      (compound-statement
         (compound-statement
            (declaration a~26 `int` 42))
         (return (name a~25 `int`))))
   (function-definition
      j~27 `fn() -> int`
      (compound-statement
         (declaration a~29 `int` 42)
         (compound-statement
            (declaration a~30 `int` 27)
            (expression (name a~30 `int`)))
         (return (name a~29 `int`)))))

----- stderr -----
