panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__decl_in_global_scope__test_simple.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - panko/tests/cases/decl_in_global_scope/test_simple.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (declaration x~0 `Int` ∅)
   (declaration y~1 `Int` 42))

----- stderr -----
